add_subdirectory( Practica )
add_subdirectory( Template )

add_subdirectory( Tutorial_01 )
add_subdirectory( Tutorial_02 )
add_subdirectory( Tutorial_03 )
add_subdirectory( Tutorial_04 )
add_subdirectory( Tutorial_05 )
add_subdirectory( Tutorial_06 )
add_subdirectory( Tutorial_07 )
add_subdirectory( Tutorial_08 )

add_subdirectory( Rubik )
add_subdirectory( Projection_NatteRobbins )

add_subdirectory( hw0 )
